--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -3,7 +3,7 @@ services:
     entrypoint:
     - sleep
     - infinity
-    image: rails
+    image: ruby
     init: true
     volumes:
     - type: bind
